frontend/src/components/HomePage/HomePage.css
.image-post {
    width: 205px;
    height: 205px;
    border-radius: 10px;
    border: 2px solid blue;
    box-shadow: 5px 5px 5px rgba(0,0,0,0.7);
    transition: all ease-in-out;
    object-fit: cover;
}

.post-container-div {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0 1rem;
    flex-wrap: wrap;
    margin-top: 15rem;
    margin-bottom: 5rem;
}

.post-div {
    display: flex;
    flex-direction: column;
    margin: 15px;
    cursor: pointer;
}

.post-title {
    font-family: 'Fredoka One', cursive;
}

.image-post:hover {
    transform: translate(-4px, -2px);
}

.image-info-div {
    display: flex;
    flex-direction: column;
    position: relative;
    top: 5px;
}

.image-info-div:hover {
    text-decoration: underline;
}

.post-price {
    font-family: 'Architects Daughter', cursive;
}

.price-control-container {
    display: flex;
    justify-content: space-between;
}

@media (min-width: 601px) {
    button.mobile-create-button {
        display: none;
    }
}

@media (max-width: 600px) {
    .user-options { 
        display: none;
    }

    .image-post {
        width: 150px;
        height: 150px;
    }

    .post-container-div {
        top: 150px;
    }

    .post-title {
        max-width: 150px;
    }

    button.mobile-create-button {
        display: block;
        position: fixed;
        bottom: 2rem;
        right: 2rem;
    }
}

